WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269044
[WebGPU] Resource usage compatibliity does not consider the texture aspect
https://bugs.webkit.org/show_bug.cgi?id=269044
Summary
[WebGPU] Resource usage compatibliity does not consider the texture aspect
Mike Wyrzykowski
Reported
2024-02-08 20:45:58 PST
[WebGPU] Resource usage compatibliity does not consider the texture aspect
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-08 20:46:16 PST
<
rdar://problem/122602154
>
Mike Wyrzykowski
Comment 2
2024-02-08 21:05:07 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24126
EWS
Comment 3
2024-02-12 20:37:28 PST
Committed
274518@main
(5bd859319294): <
https://commits.webkit.org/274518@main
> Reviewed commits have been landed. Closing PR #24126 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug